tests/snapshots/validator_snapshots__validator_all@validator-156.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/validator/p5_call_resolves_module_function.of
---
Ok
