tests/snapshots/validator_snapshots__validator_all@validator-158.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/validator/p4_universal_extend_satisfies_interface.of
---
ValidationErrors(
    [
        "unknown type 'T' in module 'test_module'",
    ],
)
