tests/snapshots/validator_snapshots__validator_all@validator-160.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/validator/p5_binary_op_arithmetic_ok.of
---
Ok
