tests/snapshots/validator_snapshots__validator_all@validator-161.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/validator/p5_binary_op_arithmetic_on_non_numeric_errors.of
---
ValidationErrors(
    [
        "type mismatch in function 'test_module::test' (binary Add): expected 'int64', found 'string'",
    ],
)
