tests/snapshots/validator_snapshots__validator_all@validator-162.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/validator/p5_method_call_via_member.of
---
Ok
