tests/snapshots/validator_snapshots__validator_all@validator-163.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/validator/p5_break_outside_loop_errors.of
---
ValidationErrors(
    [
        "'break' used outside of a loop in function 'test_module::test'",
    ],
)
