tests/snapshots/validator_snapshots__validator_all@validator-165.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/validator/p5_continue_inside_while_ok.of
---
Ok
