tests/snapshots/validator_snapshots__validator_all@validator-166.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/validator/p5_simple_body_typechecks.of
---
Ok
